--- a/OnlineExaminationSystem/OnlineExaminationSystem.csproj
+++ b/OnlineExaminationSystem/OnlineExaminationSystem.csproj
@@ -154,6 +154,9 @@
     <Compile Include="Areas\Administrator\AdministratorAreaRegistration.cs" />
     <Compile Include="Areas\Administrator\Controllers\RegistrationController.cs" />
     <Compile Include="Areas\Administrator\Models\StudentsRegistration.cs" />
+    <Compile Include="Areas\InstructorArea\Controllers\CourseController.cs" />
+    <Compile Include="Areas\InstructorArea\Controllers\ExamsController.cs" />
+    <Compile Include="Areas\InstructorArea\InstructorAreaAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Areas\Administrator\Controllers\AdminsController.cs" />
     <Compile Include="Areas\Administrator\Controllers\CoursesController.cs" />
@@ -161,6 +164,7 @@
     <Compile Include="Areas\Administrator\Controllers\InstructorsController.cs" />
     <Compile Include="Areas\Administrator\Controllers\SemestersController.cs" />
     <Compile Include="Areas\Administrator\Controllers\StudentsController.cs" />
+    <Compile Include="Extensions\UserSecurityExtenstion.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -172,6 +176,40 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\themes\base\accordion.css" />
+    <Content Include="Content\themes\base\all.css" />
+    <Content Include="Content\themes\base\autocomplete.css" />
+    <Content Include="Content\themes\base\base.css" />
+    <Content Include="Content\themes\base\button.css" />
+    <Content Include="Content\themes\base\core.css" />
+    <Content Include="Content\themes\base\datepicker.css" />
+    <Content Include="Content\themes\base\dialog.css" />
+    <Content Include="Content\themes\base\draggable.css" />
+    <Content Include="Content\themes\base\images\calendar.gif" />
+    <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Content\themes\base\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Content\themes\base\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Content\themes\base\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Content\themes\base\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Content\themes\base\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Content\themes\base\images\ui-icons_222222_256x240.png" />
+    <Content Include="Content\themes\base\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Content\themes\base\images\ui-icons_454545_256x240.png" />
+    <Content Include="Content\themes\base\images\ui-icons_888888_256x240.png" />
+    <Content Include="Content\themes\base\images\ui-icons_cd0a0a_256x240.png" />
+    <Content Include="Content\themes\base\menu.css" />
+    <Content Include="Content\themes\base\progressbar.css" />
+    <Content Include="Content\themes\base\resizable.css" />
+    <Content Include="Content\themes\base\selectable.css" />
+    <Content Include="Content\themes\base\selectmenu.css" />
+    <Content Include="Content\themes\base\slider.css" />
+    <Content Include="Content\themes\base\sortable.css" />
+    <Content Include="Content\themes\base\spinner.css" />
+    <Content Include="Content\themes\base\tabs.css" />
+    <Content Include="Content\themes\base\theme.css" />
+    <Content Include="Content\themes\base\tooltip.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -187,10 +225,23 @@
     <Content Include="Areas\Administrator\Views\Registration\Edit.cshtml" />
     <Content Include="Areas\Administrator\Views\Registration\Index.cshtml" />
     <Content Include="Areas\Administrator\Views\Registration\Students.cshtml" />
+    <Content Include="Areas\InstructorArea\Views\web.config" />
+    <Content Include="Areas\InstructorArea\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\InstructorArea\Views\Shared\_Layout.cshtml" />
+    <Content Include="Areas\InstructorArea\Views\Course\Index.cshtml" />
+    <Content Include="Areas\InstructorArea\Views\Exams\Create.cshtml" />
+    <Content Include="Areas\InstructorArea\Views\Exams\Delete.cshtml" />
+    <Content Include="Areas\InstructorArea\Views\Exams\Details.cshtml" />
+    <Content Include="Areas\InstructorArea\Views\Exams\Edit.cshtml" />
+    <Content Include="Areas\InstructorArea\Views\Exams\Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\controls.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery-ui-1.11.3.js" />
+    <Content Include="Scripts\jquery-ui-1.11.3.min.js" />
+    <Content Include="Scripts\jquery.ui.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
@@ -246,6 +297,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Areas\InstructorArea\Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
