Add web site main GUI

--- a/OnlineExaminationSystem/OnlineExaminationSystem.csproj
+++ b/OnlineExaminationSystem/OnlineExaminationSystem.csproj
@@ -178,6 +178,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\custom.css" />
     <Content Include="Content\font-awesome.css" />
+    <Content Include="Content\LearnCenter.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
@@ -217,6 +218,32 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\admi-1.jpg" />
+    <Content Include="images\admi-2.jpg" />
+    <Content Include="images\admi-3.jpg" />
+    <Content Include="images\arrows.jpg" />
+    <Content Include="images\arw.png" />
+    <Content Include="images\arws.png" />
+    <Content Include="images\banner.jpg" />
+    <Content Include="images\contact-sprit.png" />
+    <Content Include="images\education.jpg" />
+    <Content Include="images\footer-sprit.png" />
+    <Content Include="images\logo.png" />
+    <Content Include="images\menu-icon.png" />
+    <Content Include="images\p-1.jpg" />
+    <Content Include="images\p-2.jpg" />
+    <Content Include="images\p-3.jpg" />
+    <Content Include="images\p-4.jpg" />
+    <Content Include="images\p-5.jpg" />
+    <Content Include="images\p-6.jpg" />
+    <Content Include="images\p-7.jpg" />
+    <Content Include="images\p-8.jpg" />
+    <Content Include="images\pc-1.jpg" />
+    <Content Include="images\pc-2.jpg" />
+    <Content Include="images\st-1.jpg" />
+    <Content Include="images\st-2.jpg" />
+    <Content Include="images\st-4.jpg" />
+    <Content Include="images\top.png" />
     <Content Include="img\1.png" />
     <Content Include="img\2.png" />
     <Content Include="img\3.png" />
@@ -227,7 +254,11 @@
     <Content Include="Scripts\dataTables\dataTables.bootstrap.js" />
     <Content Include="Scripts\dataTables\jquery.dataTables.js" />
     <Content Include="Content\morris\morris-0.4.3.min.css" />
+    <Content Include="Scripts\easing.js" />
+    <Content Include="Scripts\jquery.contentcarousel.js" />
     <Content Include="Scripts\jquery.metisMenu.js" />
+    <Content Include="Scripts\jquery.mousewheel.js" />
+    <Content Include="Scripts\jquery.wmuSlider.js" />
     <Content Include="Scripts\morris\morris.js" />
     <Content Include="Scripts\morris\raphael-2.1.0.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -268,8 +299,11 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\move-top.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\responsive-nav.js" />
+    <Content Include="Scripts\responsiveslides.min.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
