--- a/OES.Model/OES.Model.csproj
+++ b/OES.Model/OES.Model.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Examination\Course.cs" />
     <Compile Include="Users\Instructor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Users\Profile.cs" />
     <Compile Include="Users\Student.cs" />
     <Compile Include="Users\User.cs" />
   </ItemGroup>
