--- a/OnlineExaminationSystem/OnlineExaminationSystem.csproj
+++ b/OnlineExaminationSystem/OnlineExaminationSystem.csproj
@@ -157,8 +157,10 @@
     <Compile Include="Areas\InstructorArea\Controllers\ChaptersController.cs" />
     <Compile Include="Areas\InstructorArea\Controllers\CourseController.cs" />
     <Compile Include="Areas\InstructorArea\Controllers\InstructorBaseController.cs" />
+    <Compile Include="Areas\InstructorArea\Controllers\QuestionsController.cs" />
     <Compile Include="Areas\InstructorArea\InstructorAreaAreaRegistration.cs" />
     <Compile Include="Areas\InstructorArea\Models\ChapterViewModel.cs" />
+    <Compile Include="Areas\InstructorArea\Models\QuestionViewModel.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Areas\Administrator\Controllers\AdminsController.cs" />
     <Compile Include="Areas\Administrator\Controllers\CoursesController.cs" />
@@ -295,6 +297,9 @@
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont.woff2" />
     <Content Include="fonts\FontAwesome.otf" />
+    <Content Include="Areas\InstructorArea\Views\Questions\Create.cshtml" />
+    <Content Include="Areas\InstructorArea\Views\Questions\Edit.cshtml" />
+    <Content Include="Areas\InstructorArea\Views\Questions\Index.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\controls.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
