update instructor web config

--- a/OnlineExaminationSystem/Areas/InstructorArea/Views/web.config
+++ b/OnlineExaminationSystem/Areas/InstructorArea/Views/web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.Optimization" />
         <add namespace="OnlineExaminationSystem" />
+        <add namespace="OnlineExaminationSystem.Areas.InstructorArea.Models" />
         
       </namespaces>
     </pages>
