--- a/OnlineExaminationSystem/OnlineExaminationSystem.csproj
+++ b/OnlineExaminationSystem/OnlineExaminationSystem.csproj
@@ -184,6 +184,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\component\jquery.datetimepicker.css" />
     <Content Include="Content\custom.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
@@ -263,6 +264,7 @@
     <Content Include="img\4.png" />
     <Content Include="img\find_user.png" />
     <Content Include="Scripts\component\deleteButton.js" />
+    <Content Include="Scripts\component\jquery.datetimepicker.js" />
     <Content Include="Scripts\custom.js" />
     <Content Include="Content\dataTables\dataTables.bootstrap.css" />
     <Content Include="Scripts\dataTables\dataTables.bootstrap.js" />
