--- a/OES.Modules/OES.Modules.csproj
+++ b/OES.Modules/OES.Modules.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\GenerateExamModule.cs" />
     <Compile Include="Core\Result.cs" />
     <Compile Include="Instructor\ChapterModule.cs" />
     <Compile Include="Instructor\ExamModule.cs" />
